--- a/boot240403/pom.xml
+++ b/boot240403/pom.xml
@@ -62,6 +62,11 @@
 			<version>2.3.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		  	<groupId>org.bgee.log4jdbc-log4j2</groupId>
+		  	<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+		  	<version>1.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
