--- a/boot240403/src/main/resources/application.properties
+++ b/boot240403/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=boot240403
-# server.port8090
+# server.port=8090
+# server.servlet.context-path=/yedam
  
 # datasource (oracle)
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
